--- a/new_pages/basics.qmd
+++ b/new_pages/basics.qmd
@@ -12,7 +12,7 @@ Parts of this page have been adapted with permission from the [R4Epis project](h
 
 See the page on [Transition to R](transition_to_R.qmd) for tips on switching to R from STATA, SAS, or Excel.
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message = F}
 # import the cleaned ebola linelist
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 pacman::p_load(apyramid)
@@ -46,7 +46,7 @@ The R community of users is enormous and collaborative. New packages and tools t
 
 **Packages** - An R package is a shareable bundle of functions. Read more [in the Packages section](#packages).
 
-**Scripts** - A script is the document file that hold your commands. Read more [in the Scripts section](#scripts)
+**Scripts** - A script is the document file that hold your commands. Read more [in the Scripts section](#scripts).
 
 ## Resources for learning {#learning}
 
@@ -101,7 +101,7 @@ The [R4Epis](https://r4epis.netlify.app/) project website aims to "develop stand
 
 ### Languages other than English {.unnumbered}
 
-[Materiales de RStudio en Español](https://www.rstudio.com/collections/espanol/)
+[Materiales de RStudio en Español](https://github.com/cienciadedatos/)
 
 [Introduction à R et au tidyverse (Francais)](https://juba.github.io/tidyverse/index.html)
 
