--- a/new_pages/characters_strings.qmd
+++ b/new_pages/characters_strings.qmd
@@ -9,7 +9,7 @@ knitr::include_graphics(here::here("images", "Characters_Strings_1500x500.png"))
 
 This page demonstrates use of the **stringr** package to evaluate and handle character values ("strings").  
 
-1. Combine, order, split, arrange - `str_c()`, `str_glue()`, `str_order()`, `str_split()`  
+1. Combine, order, split, arrange - `str_c()`, `str_glue()`, `str_order()`, `str_split()`.
 2. Clean and standardise.  
     * Adjust length - `str_pad()`, `str_trunc()`, `str_wrap()`.  
     * Change case - `str_to_upper()`, `str_to_title()`, `str_to_lower()`, `str_to_sentence()`.  
@@ -38,7 +38,8 @@ Install or load the **stringr** and other **tidyverse** packages.
 pacman::p_load(
   stringr,    # many functions for handling strings
   tidyverse,  # for optional data manipulation
-  tools)      # alternative for converting to title case
+  tools       # alternative for converting to title case
+  )      
 
 ```
 
@@ -48,7 +49,7 @@ pacman::p_load(
 
 In this page we will occassionally reference the cleaned `linelist` of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import data with the `import()` function from the **rio** package (it handles many file types like .xlsx, .csv, .rds - see the [Import and export](importing.qmd) page for details).  
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 # import the linelist into R
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
