--- a/new_pages/editorial_style.qmd
+++ b/new_pages/editorial_style.qmd
@@ -139,7 +139,7 @@ With version 1.0.1 the following changes have been implemented:
 * Interactive plots: added `ungroup()` to chunk that makes `agg_weeks` so that `expand()` works as intended.  
 * Time series: added `data.frame()` around objects within all `trending::fit()` and `predict()` commands.  
 * Combinations analysis: Switch `case_when()` to `ifelse()` and added optional `across()` code for preparing the data.  
-* Transmission chains: Update to more recent version of **epicontacts**.
+* Transmission chains: Update to more recent version of [**epicontacts**](https://www.repidemicsconsortium.org/epicontacts/).
 
 
 
