--- a/new_pages/gis.qmd
+++ b/new_pages/gis.qmd
@@ -108,7 +108,7 @@ knitr::include_graphics(here::here("images", "gis_heatmap.png"))
 # proportional symbols img here
 ```
 
-You can also combine several different types of visualizations to show complex geographic patterns. For example, the cases (dots) in the map below are colored according to their closest health facility (see legend). The large red circles show *health facility catchment areas* of a certain radius, and the bright red case-dots those that were outside any catchment range:
+You can also combine several different types of visualizations to show complex geographic patterns. For example, the cases (dots) in the map below are colored according to their closest health facility (see legend). The large black circles show *health facility catchment areas* of a certain radius, and the bright red case-dots those that were outside any catchment range:
 
 ```{r, fig.align = "center", echo=F}
 knitr::include_graphics(here::here("images", "gis_hf_catchment.png"))
@@ -1054,5 +1054,8 @@ knitr::include_graphics(here::here("images", "gis_lmflowchart.jpg"))
 
 * **SpatialEpiApp** - a [Shiny app that is downloadable as an R package](https://github.com/Paula-Moraga/SpatialEpiApp), allowing you to provide your own data and conduct mapping, cluster analysis, and spatial statistics.  
 
+[Spatial Statistics for Data Science: Theory and Practice with R](https://www.paulamoraga.com/book-spatial/index.html)
+
+[Geospatial Health Data: Modeling and Visualization with R-INLA and Shiny](https://www.paulamoraga.com/book-geospatial/)
 
 * An Introduction to Spatial Econometrics in R [workshop](http://www.econ.uiuc.edu/~lab/workshop/Spatial_in_R.html)
