--- a/new_pages/importing.qmd
+++ b/new_pages/importing.qmd
@@ -249,7 +249,7 @@ Unfortunately `skip = ` only accepts one integer value, *not* a range (e.g. "2:1
 
 Sometimes, your data may have a *second* row, for example if it is a "data dictionary" row as shown below. This situation can be problematic because it can result in all columns being imported as class "character".  
 
-```{r, echo=F}
+```{r, echo=F, waring = F, message = F}
 # HIDDEN FROM READER
 ####################
 # Create second header row of "data dictionary" and insert into row 2. Save as new dataframe.
@@ -394,8 +394,11 @@ Gsheets_demo <- read_sheet("1scgtzkVLLHAe5a6_eFQEwkZcc14yFUx1KgOMZ4AKUfY")
 Another package, **googledrive** offers useful functions for writing, editing, and deleting Google sheets. For example, using the  `gs4_create()` and `sheet_write()` functions found in this package. 
 
 Here are some other helpful online tutorials:  
+
 [Google sheets importing tutorial](https://felixanalytix.medium.com/how-to-read-write-append-google-sheet-data-using-r-programming-ecf278108691). 
+
 [More detailed tutorial](https://googlesheets4.tidyverse.org/articles/googlesheets4.html).  
+
 [Interaction between the googlesheets4 and tidyverse](https://googlesheets4.tidyverse.org/articles/articles/drive-and-sheets.html).  
 
 Additionally, you can also use `import` from the **rio** package.
@@ -548,8 +551,8 @@ df_from_clipboard <- read.table(
 
 Often you may receive daily updates to your datasets. In this case you will want to write code that imports the most recent file. Below we present two ways to approach this:  
 
-* Selecting the file based on the date in the file name  
-* Selecting the file based on file metadata (last modification)  
+* Selecting the file based on the date in the file name.  
+* Selecting the file based on file metadata (last modification).
 
 
 ### Dates in file name {.unnumbered}  
@@ -658,7 +661,7 @@ Each API-enabled website will have its own documentation and specifics to become
 
 Needless to say, it is necessary to have an internet connection to import data via API. We will briefly give examples of use of APIs to import data, and link you to further resources.  
 
-*Note: recall that data may be *posted* on a website without an API, which may be easier to retrieve. For example a posted CSV file may be accessible simply by providing the site URL to `import()` as described in the section on [importing from Github](#import_github).*  
+Note: recall that data may be *posted* on a website without an API, which may be easier to retrieve. For example a posted CSV file may be accessible simply by providing the site URL to `import()` as described in the section on [importing from Github](#import_github). 
 
 
 ### HTTP request {.unnumbered}  
@@ -695,12 +698,12 @@ Scenario: We want to import a list of fast food outlets in the city of Trafford,
 
 Here are the parameters for our request:  
 
-* HTTP verb: GET  
-* API endpoint URL: http://api.ratings.food.gov.uk/Establishments  
-* Selected parameters: name, address, longitude, latitude, businessTypeId, ratingKey, localAuthorityId  
-* Headers: “x-api-version”, 2  
-* Data format(s): JSON, XML  
-* Documentation: http://api.ratings.food.gov.uk/help  
+* HTTP verb: GET.
+* API endpoint URL: [http://api.ratings.food.gov.uk/Establishments](http://api.ratings.food.gov.uk/Establishments).  
+* Selected parameters: name, address, longitude, latitude, businessTypeId, ratingKey, localAuthorityId.
+* Headers: “x-api-version”.
+* Data format(s): JSON, XML.
+* Documentation: [http://api.ratings.food.gov.uk/help](http://api.ratings.food.gov.uk/help).  
 
 The R code would be as follows:  
 
@@ -872,7 +875,9 @@ How to save a network graph, such as a transmission tree, is addressed in the pa
 ## Resources {} 
 
 [R Data Import/Export Manual](https://cran.r-project.org/doc/manuals/r-release/R-data.html)  
+
 [R 4 Data Science chapter on data import](https://r4ds.had.co.nz/data-import.html#data-import)  
+
 [ggsave() documentation](https://ggplot2.tidyverse.org/reference/ggsave.html)  
 
 
