--- a/new_pages/packages_suggested.qmd
+++ b/new_pages/packages_suggested.qmd
@@ -102,6 +102,7 @@ pacman::p_load(
      ggrepel,          # smart labels
      plotly,           # interactive graphics
      gganimate,        # animated graphics 
+     ggalluvial,       # for alluvial/sankey diagrams
 
      
      # gis
@@ -145,16 +146,12 @@ pacman::p_load(
 
 Below are commmands to install two packages directly from Github repositories.  
 
-* The development version of **epicontacts** contains the ability to make transmission trees with an temporal x-axis  
 * The **epirhandbook** package contains all the example data for this handbook and can be used to download the offline version of the handbook.  
 
 
 ```{r, eval=F}
 # Packages to download from Github (not available on CRAN)
 ##########################################################
-
-# Development version of epicontacts (for transmission chains with a time x-axis)
-pacman::p_install_gh("reconhub/epicontacts@timeline")
 
 # The package for this handbook, which includes all the example data  
 pacman::p_install_gh("appliedepi/epirhandbook")
