--- a/new_pages/standardization.qmd
+++ b/new_pages/standardization.qmd
@@ -292,7 +292,7 @@ DT::datatable(all_data, rownames = FALSE, options = list(pageLength = 5, scrollX
 <!-- ======================================================= -->
 ## **PHEindicatormethods** package {#standard_phe  }
 
-Another way of calculating standardized rates is with the **PHEindicatormethods** package. This package allows you to calculate directly as well as indirectly standardized rates. We will show both.  
+One way of calculating standardized rates is with the **PHEindicatormethods** package. This package allows you to calculate directly as well as indirectly standardized rates. We will show both.  
 
 This section will use the `all_data` data frame created at the end of the Preparation section. This data frame includes the country populations, death events, and the world standard reference population. You can view it [here](#standard_all).  
 
