--- a/new_pages/stat_tests.qmd
+++ b/new_pages/stat_tests.qmd
@@ -3,7 +3,7 @@
 
 This page demonstrates how to conduct simple statistical tests using **base** R, **rstatix**, and **gtsummary**.  
 
-* T-test  
+* T-test
 * Shapiro-Wilk test  
 * Wilcoxon rank sum test  
 * Kruskal-Wallis test  
@@ -48,7 +48,7 @@ pacman::p_load(
 We import the dataset of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import your data with the `import()` function from the **rio** package (it accepts many file types like .xlsx, .rds, .csv - see the [Import and export](importing.qmd) page for details).  
 
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 # import the linelist into R
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
