--- a/new_pages/survey_analysis.qmd
+++ b/new_pages/survey_analysis.qmd
@@ -76,9 +76,9 @@ pacman::p_load_gh(
 
 The example dataset used in this section:
 
--   fictional mortality survey data.
--   fictional population counts for the survey area. 
--   data dictionary for the fictional mortality survey data. 
+-   Fictional mortality survey data.
+-   Fictional population counts for the survey area. 
+-   Data dictionary for the fictional mortality survey data. 
 
 This is based off the MSF OCA ethical review board pre-approved survey. The 
 fictional dataset was produced as part of the ["R4Epis" project](https://r4epis.netlify.app/). 
@@ -182,7 +182,7 @@ are in.
 Finally, we recode all of the yes/no variables to TRUE/FALSE variables - otherwise
 these cant be used by the **survey** proportion functions. 
 
-```{r cleaning}
+```{r cleaning, warning=F, message=F}
 
 ## select the date variable names from the dictionary 
 DATEVARS <- survey_dict %>% 
