--- a/new_pages/time_series.qmd
+++ b/new_pages/time_series.qmd
@@ -193,12 +193,12 @@ file_paths <- list.files(
 file_paths <- file_paths[str_detect(file_paths, "germany")]
 
 ## read in all the files as a stars object 
-data <- stars::read_stars(file_paths)
+data <- stars::read_stars(file_paths, quiet = TRUE)
 ```
 
 Once these files have been imported as the object `data`, we will convert them to a data frame.  
 
-```{r}
+```{r, message=F}
 ## change to a data frame 
 temp_data <- as_tibble(data) %>% 
   ## add in variables and correct units
@@ -1621,9 +1621,12 @@ ggplot(estimate_res, aes(x = epiweek)) +
 <!-- ======================================================= -->
 ## Resources {  }
 
-[forecasting: principles and practice textbook](https://otexts.com/fpp3/)  
-[EPIET timeseries analysis case studies](https://github.com/EPIET/TimeSeriesAnalysis)  
-[Penn State course](https://online.stat.psu.edu/stat510/lesson/1) 
+[forecasting: principles and practice textbook](https://otexts.com/fpp3/)
+
+[EPIET timeseries analysis case studies](https://github.com/EPIET/TimeSeriesAnalysis)
+
+[Penn State course](https://online.stat.psu.edu/stat510/lesson/1)
+
 [Surveillance package manuscript](https://www.jstatsoft.org/article/view/v070i10)
 
 
