--- a/new_pages/factors.qmd
+++ b/new_pages/factors.qmd
@@ -39,7 +39,7 @@ pacman::p_load(
 
 We import the dataset of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import your data with the `import()` function from the **rio** package (it accepts many file types like .xlsx, .rds, .csv - see the [Import and export](importing.qmd) page for details).  
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 # import the linelist into R
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
@@ -109,7 +109,7 @@ linelist <- linelist %>%
 levels(linelist$delay_cat)
 ```
 
-The function `fct_relevel()` has the additional utility of allowing you to manually specify the level order. Simply write the level values in order, in quotation marks, separated by commas, as shown below. Note that the spelling must exactly match the values. If you want to create levels that do not exist in the data, use [`fct_expand()` instead](#fct_add)).  
+The function `fct_relevel()` has the additional utility of allowing you to manually specify the level order. Simply write the level values in order, in quotation marks, separated by commas, as shown below. Note that the spelling must exactly match the values. If you want to create levels that do not exist in the data, use [`fct_expand()` instead](#fct_add).  
 
 ```{r}
 linelist <- linelist %>%
@@ -518,5 +518,6 @@ See the [Working with dates](dates.qmd) page for more information about **aweek*
 <!-- ======================================================= -->
 ## Resources {} 
 
-R for Data Science page on [factors](https://r4ds.had.co.nz/factors.html)  
+R for Data Science page on [factors](https://r4ds.had.co.nz/factors.html)
+
 [aweek package vignette](https://cran.r-project.org/web/packages/aweek/vignettes/introduction.html)
