--- a/new_pages/grouping.qmd
+++ b/new_pages/grouping.qmd
@@ -40,7 +40,8 @@ pacman::p_load(
   rio,       # to import data
   here,      # to locate files
   tidyverse, # to clean, handle, and plot the data (includes dplyr)
-  janitor)   # adding total rows and columns
+  janitor    # adding total rows and columns
+  )  
 ```
 
 
@@ -50,7 +51,7 @@ pacman::p_load(
 
 We import the dataset of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). The dataset is imported using the `import()` function from the **rio** package. See the page on [Import and export](importing.qmd) for various ways to import data.
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 linelist <- rio::import(here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
 
@@ -139,7 +140,7 @@ by_outcome_gender <- by_outcome %>%
 ```
 
 
-** Keep all groups**  
+**Keep all groups**  
 
 If you group on a column of class factor there may be levels of the factor that are not currently present in the data. If you group on this column, by default those non-present levels are dropped and not included as groups. To change this so that all levels appear as groups (even if not present in the data), set `.drop = FALSE` in your `group_by()` command.  
 
@@ -211,7 +212,7 @@ linelist %>%
 
 ## Counts and tallies  
 
-`count()` and `tally()` provide similar functionality but are different. Read more about the distinction between `tally()` and `count()` [here](https://dplyr.tidyverse.org/reference/count.html)    
+`count()` and `tally()` provide similar functionality but are different. Read more about the distinction between `tally()` and `count()` [here](https://dplyr.tidyverse.org/reference/count.html).
 
 ### `tally()` {.unnumbered}  
 
