--- a/new_pages/moving_average.qmd
+++ b/new_pages/moving_average.qmd
@@ -35,7 +35,7 @@ pacman::p_load(
 We import the dataset of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import data with the `import()` function from the **rio** package (it handles many file types like .xlsx, .csv, .rds - see the [Import and export](importing.qmd) page for details).  
 
 
-```{r, echo=F}
+```{r, echo=F, message=F, warning=F}
 # import the linelist into R
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
@@ -176,7 +176,7 @@ Now you can plot these data using `ggplot()`:
 
 ```{r}
 ggplot(data = rolling) +
-  geom_line(mapping = aes(x = date_hospitalisation, y = indexed_7day), size = 1)
+  geom_line(mapping = aes(x = date_hospitalisation, y = indexed_7day), linewidth = 1)
 ```
 
 
