--- a/new_pages/tables_descriptive.qmd
+++ b/new_pages/tables_descriptive.qmd
@@ -47,7 +47,7 @@ pacman::p_load(
 
 We import the dataset of cases from a simulated Ebola epidemic. If you want to follow along, <a href='https://github.com/appliedepi/epirhandbook_eng/raw/master/data/case_linelists/linelist_cleaned.rds' class='download-button'>click to download the "clean" linelist</a> (as .rds file). Import your data with the `import()` function from the **rio** package (it accepts many file types like .xlsx, .rds, .csv - see the [Import and export](importing.qmd) page for details).  
 
-```{r, echo=F}
+```{r, echo=F, warning=F, message=F}
 # import the linelist into R
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 ```
@@ -675,8 +675,9 @@ by_hospital <- linelist %>%
   filter(!is.na(outcome) & hospital != "Missing") %>%  # Remove cases with missing outcome or hospital
   group_by(hospital, outcome) %>%                      # Group data
   summarise(                                           # Create new summary columns of indicators of interest
-    N = n(),                                            # Number of rows per hospital-outcome group     
-    ct_value = median(ct_blood, na.rm=T))               # median CT value per group
+    N = n(),                                           # Number of rows per hospital-outcome group     
+    ct_value = median(ct_blood, na.rm=T)               # median CT value per group
+    )               
   
 by_hospital # print table
 ```
